--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -965,7 +965,7 @@
 }
 </style>
     <style>body {
-    padding: 40px;
+    padding: 2% 8%;
 }
 
 .markdown-body {
@@ -973,7 +973,8 @@
     font-family: 'Noto Sans JP', sans-serif;
 }
 
-.markdown-body code, .markdown-body pre {
+.markdown-body code,
+.markdown-body pre {
     font-family: 'Source Code Pro', monospace;
 }
 
@@ -1061,8 +1062,7 @@
 
 .connection-status-box h1 {
     font-size: 1em;
-}
-</style>
+}</style>
     <style>/*
 以下、
 https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css
