キーショートカットの表記ミスの修正

--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -1901,8 +1901,8 @@ if (typeof x === &quot;number&quot;) {
 <ul>
 <li><p>VSCodeを使う場合、</p>
 <p>  1 空のフォルダを好きな場所に作る</p>
-<p>  2 もしVSCodeで既に別のフォルダを開いていたら<code>Ctrl+K -&gt; O</code>で閉じる</p>
-<p>  3 <code>Ctrl+K -&gt; Ctrl+F</code>からフォルダを開く（あるいはコマンドプロンプト上で<code>code フォルダへのパス</code>）</p>
+<p>  2 もしVSCodeで既に別のフォルダを開いていたら<code>Ctrl+K -&gt; F</code>で閉じる</p>
+<p>  3 <code>Ctrl+K -&gt; Ctrl+O</code>からフォルダを開く（あるいはコマンドプロンプト上で<code>code フォルダへのパス</code>）</p>
 <p>  4 <code>Ctrl+Shift+@</code>でコマンドプロンプト（ターミナル）を開いてコマンドを打つ（ PowerShell/コマンドプロンプト/Bashの切り替えは <code>Ctrl+Shift+P</code> -&gt; <code>select default shell</code> からできます。）</p>
 </li>
 <li><p><code>pip</code>コマンドが存在しないと表示された場合は、<code>py -m pip</code>（MacOSやLinuxでは<code>python3 -m pip</code>）を使ってください。</p>
