--- a/markdown/mis_python_javascript.html
+++ b/markdown/mis_python_javascript.html
@@ -2715,41 +2715,73 @@ Array.prototype.forEach.call(document.getElementsByClassName("questionnaire"), f
 });
 </script>
     <script>"use strict";
+var getMode = function () {
+    try {
+        var mode = localStorage.getItem("mode");
+        if (mode === "dark-mode") {
+            return "dark-mode";
+        }
+        else {
+            return "light-mode";
+        }
+    }
+    catch (e) {
+        // localStorageへのアクセス権がない場合とか、localStorageが実装されてないブラウザとか
+        console.log(e);
+        return "light-mode";
+    }
+};
+var saveMode = function (mode) {
+    try {
+        localStorage.setItem("mode", mode);
+    }
+    catch (e) {
+        console.log(e);
+    }
+};
+var setBodyElementClass = function (mode) {
+    if (mode === "dark-mode") {
+        document.body.classList.add("dark");
+    }
+    else {
+        document.body.classList.remove("dark");
+    }
+};
+// "ライトモードへ" ボタン
 Array.prototype.forEach.call(document.getElementsByClassName("light-mode-button"), function (el) {
     if (!(el instanceof HTMLElement)) {
         return;
     }
     el.addEventListener("click", function () {
-        document.body.classList.remove("dark");
-        try {
-            localStorage.setItem("theme", "light");
-        }
-        catch (e) {
-            console.log(e);
-        }
+        setBodyElementClass("light-mode");
+        saveMode("light-mode");
     });
 });
+// "ダークモードへ" ボタン
 Array.prototype.forEach.call(document.getElementsByClassName("dark-mode-button"), function (el) {
     if (!(el instanceof HTMLElement)) {
         return;
     }
     el.addEventListener("click", function () {
-        document.body.classList.add("dark");
-        try {
-            localStorage.setItem("theme", "dark");
-        }
-        catch (e) {
-            console.log(e);
-        }
+        setBodyElementClass("dark-mode");
+        saveMode("dark-mode");
     });
 });
-try {
-    if (localStorage.getItem("theme") === "dark") {
-        document.body.classList.add("dark");
+{
+    // 旧バージョンのとの互換性を保つ ("theme" -> "mode" に移行した)
+    try {
+        if (localStorage.getItem("theme") === "dark") {
+            saveMode("dark-mode");
+        }
+        localStorage.removeItem("theme");
     }
-}
-catch (e) {
-    console.log(e);
+    catch (e) {
+        console.log(e);
+    }
+    // 初期設定
+    var mode = getMode();
+    setBodyElementClass(mode);
+    saveMode(mode);
 }
 </script>
 </body>
