Rust講座書きかけ

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <li><a href="https://misw.github.io/markdown/pdf/R講座.pdf" target="_blank">R入門</a></li>
                 <li><a href="https://misw.github.io/markdown/pdf/OpenProcessing1.pdf" target="_blank">OpenProcessing資料1</a></li>
                 <li><a href="https://misw.github.io/markdown/mis_openprocessing2.html" target="_blank">OpenProcessing資料2</a></li>
+                <li><a href="rust_tutorial.html" target="_blank">Rustプログラミング入門</a></li>
 
 
 
